--- a/core/templates/core/account_form.html
+++ b/core/templates/core/account_form.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% load widget_tweaks %}
+{% load static %}
 
 {% block content %}
 <div class="container mt-4">
@@ -8,8 +9,8 @@
   <form method="post" id="account-form" novalidate>
     {% csrf_token %}
     <div style="display:none">
-  {{ form.non_field_errors }}
-</div>
+      {{ form.non_field_errors }}
+    </div>
 
     <input type="hidden" name="confirm_merge" id="confirm_merge" value="false">
 
@@ -32,7 +33,7 @@
     </div>
 
     <div class="d-flex gap-2">
-      <button type="button" class="btn btn-success" onclick="confirmAccountMerge()">💾 Save</button>
+      <button type="button" class="btn btn-success">💾 Save</button>
 
       {% if form.instance.pk %}
         <button type="button" class="btn btn-outline-danger" onclick="confirmDelete()">🗑️ Delete</button>
@@ -43,25 +44,6 @@
   </form>
 </div>
 
-<script>
-function confirmAccountMerge() {
-  const form = document.getElementById("account-form");
-  const confirmField = document.getElementById("confirm_merge");
-
-  const errorEl = document.querySelector(".nonfield ul li");
-  const isMergeWarning = errorEl && errorEl.innerText.includes("Queres fundir os saldos");
-
-  if (isMergeWarning) {
-    if (confirm("⚠ Já existe uma conta com esse nome. Queres fundir os saldos?")) {
-      confirmField.value = "true";
-      form.submit();
-    }
-    return;
-  }
-
-  form.submit();
-}
-</script>
-
-
+<!-- ⬇️ Script externo separado -->
+<script src="{% static 'core/js/account_form.js' %}"></script>
 {% endblock %}
