--- a/core/templates/core/category_form.html
+++ b/core/templates/core/category_form.html
@@ -13,8 +13,13 @@
         {% endif %}
       </h2>
 
-      <form method="post" novalidate>
+      <form method="post" id="account-form" novalidate>
         {% csrf_token %}
+        <input type="hidden" name="confirm_merge" id="confirm_merge" value="false">
+
+        <div style="display: none;">
+          {{ form.non_field_errors }}
+        </div>
 
         {% for field in form %}
           <div class="mb-3">
@@ -31,7 +36,7 @@
 
         <div class="d-flex justify-content-between align-items-center">
           <a href="{% url 'account_list' %}" class="btn btn-outline-secondary">← Back</a>
-          <button type="submit" class="btn btn-primary">
+          <button type="button" class="btn btn-primary" id="submit-btn">
             {% if form.instance.pk %}Save Changes{% else %}Create Account{% endif %}
           </button>
         </div>
@@ -39,4 +44,6 @@
     </div>
   </div>
 </div>
+
+<script src="{% static 'core/js/account_form.js' %}"></script>
 {% endblock %}
