--- a/core/templates/core/account_balance.html
+++ b/core/templates/core/account_balance.html
@@ -43,7 +43,9 @@
           <td>
             {% if form.instance.pk %}
               {{ form.DELETE.as_hidden }}
-              <button type="button" class="btn btn-sm btn-outline-danger" onclick="deleteAccount('{{ form.instance.pk }}', this)">
+              <button type="button"
+                      class="btn btn-sm btn-outline-danger delete-btn"
+                      data-id="{{ form.instance.pk }}">
                 ×
               </button>
             {% endif %}
@@ -62,7 +64,9 @@
       <td class="text-end">
         <input type="number" step="0.01" name="form-__prefix__-reported_balance" class="form-control text-end" />
       </td>
-      <td></td>
+      <td>
+        <button type="button" class="btn btn-sm btn-outline-danger remove-row-btn">×</button>
+      </td>
     </tr>
   </template>
 
@@ -84,5 +88,6 @@
   <a href="{% url 'account_list' %}" class="btn btn-outline-secondary">⚙ Manage Accounts</a>
 </div>
 
-<script src="{% static 'core/account_balance.js' %}"></script>
+<!-- JavaScript final -->
+<script src="{% static 'core/account_balance.js' %}" defer></script>
 {% endblock %}
