Melhorias em account_balance.html: total, animações, validação, UI

--- a/core/templates/confirms/account_confirm_merge.html
+++ b/core/templates/confirms/account_confirm_merge.html
@@ -1,4 +1,4 @@
-{% extends "core/partials/confirm_base.html" %}
+{% extends "core/confirm_base.html" %}
 
 {% block title %}Merge Accounts{% endblock %}
 
