--- a/core/templates/core/category_form.html
+++ b/core/templates/core/category_form.html
@@ -45,5 +45,5 @@
   </div>
 </div>
 
-<script src="{% static 'core/js/account_form.js' %}"></script>
+<script src="{% static 'js/account_form.js' %}"></script>
 {% endblock %}
