--- a/core/templates/core/category_list.html
+++ b/core/templates/core/category_list.html
@@ -30,5 +30,5 @@
   {% endif %}
 </div>
 
-<script src="{% static 'core/js/category_list.js' %}"></script>
+<script src="{% static 'js/category_list.js' %}"></script>
 {% endblock %}
