--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -19,5 +19,5 @@
 </div>
 
 <!-- JS externo para a página inicial -->
-<script src="{% static 'core/js/home.js' %}"></script>
+<script src="{% static 'js/home.js' %}"></script>
 {% endblock %}
