--- a/core/templates/core/transaction_form.html
+++ b/core/templates/core/transaction_form.html
@@ -44,5 +44,5 @@
   </div>
 </div>
 
-<script src="{% static 'core/js/transaction_form.js' %}"></script>
+<script src="{% static 'js/transaction_form.js' %}"></script>
 {% endblock %}
