--- a/core/templates/core/transaction_list.html
+++ b/core/templates/core/transaction_list.html
@@ -48,5 +48,5 @@
   {% endif %}
 </div>
 
-<script src="{% static 'core/js/transaction_list.js' %}"></script>
+<script src="{% static 'js/transaction_list.js' %}"></script>
 {% endblock %}
