--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -10,7 +10,8 @@
 
   <link rel="shortcut icon" href="{% static 'images/favicon.ico' %}" type="image/x-icon" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
-  <link rel="stylesheet" href="{% static 'css/main.css' %}" />
+  <link rel="stylesheet" href="{% static 'css/main.css' %}">
+
   {% block extra_head %}{% endblock %}
 </head>
 <body>
