Melhorias em account_balance.html: total, animações, validação, UI

--- a/core/templates/core/account_balance.html
+++ b/core/templates/core/account_balance.html
@@ -55,25 +55,24 @@
     </tbody>
   </table>
 
-  <template id="empty-form-template"><tr class="form-row d-none">
-    <tr class="form-row d-none">
-      <td>
-        <input type="text" name="form-__prefix__-account" class="form-control" />
-        <input type="hidden" name="form-__prefix__-id" />
-      </td>
-      <td class="text-end">
-        <input type="number" step="0.01" name="form-__prefix__-reported_balance" class="form-control text-end" />
-      </td>
-      <td>
-        <button type="button" class="btn btn-sm btn-outline-danger remove-row-btn">×</button>
-      </td>
-    </tr>
-  </template>
+<template id="empty-form-template">
+  <tr class="form-row">
+    <td>
+      <input type="text" name="form-__prefix__-account" class="form-control" />
+      <input type="hidden" name="form-__prefix__-id" />
+    </td>
+    <td class="text-end">
+      <input type="number" step="0.01" name="form-__prefix__-reported_balance" class="form-control text-end" />
+    </td>
+    <td>
+      <button type="button" class="btn btn-sm btn-outline-danger remove-row-btn">×</button>
+    </td>
+  </tr>
+</template>
 
   <div class="d-flex justify-content-between align-items-center">
     <div>
       <button type="submit" class="btn btn-primary">💾 Save</button>
-      <button type="button" id="reset-btn" class="btn btn-outline-secondary">↺ Reset</button>
     </div>
     <div>
       <span id="total-balance" class="me-3 fw-bold"></span>
