--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -13,6 +13,8 @@
   <link rel="stylesheet" href="{% static 'css/main.css' %}">
 
   {% block extra_head %}{% endblock %}
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+
 </head>
 <body>
 
@@ -20,7 +22,7 @@
 {% block navbar %}
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark" aria-label="Main navigation">
   <div class="container-fluid">
-    <a class="navbar-brand d-flex align-items-center gap-2" href="{% url 'transaction_list' %}">
+    <a class="navbar-brand d-flex align-items-center gap-2" href="{% url 'home' %}">
       <span role="img" aria-label="money bag">💰</span> <strong>ourfinancetracker</strong>
     </a>
 
@@ -29,42 +31,67 @@
       <span class="navbar-toggler-icon"></span>
     </button>
 
-    <div class="collapse navbar-collapse" id="mainNav">
-      {% if user.is_authenticated %}
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link {% if request.resolver_match.url_name == 'transaction_list' %}active{% endif %}" href="{% url 'transaction_list' %}">Dashboard</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link {% if request.resolver_match.url_name == 'transaction_create' %}active{% endif %}" href="{% url 'transaction_create' %}">New Transaction</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link {% if request.resolver_match.url_name == 'category_list' %}active{% endif %}" href="{% url 'category_list' %}">Categories</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link {% if request.resolver_match.url_name == 'account_balance' %}active{% endif %}" href="{% url 'account_balance' %}">Account Balances</a>
-          </li>
-        </ul>
+<div class="collapse navbar-collapse" id="mainNav">
+  {% if user.is_authenticated %}
+    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+      <li class="nav-item">
+        <a class="nav-link {% if request.resolver_match.url_name == 'transaction_list' %}active{% endif %}" href="{% url 'transaction_list' %}">
+          <i class="bi bi-bar-chart-fill me-1"></i> Dashboard
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link {% if request.resolver_match.url_name == 'transaction_create' %}active{% endif %}" href="{% url 'transaction_create' %}">
+          <i class="bi bi-plus-circle me-1"></i> New Transaction
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link {% if request.resolver_match.url_name == 'category_list' %}active{% endif %}" href="{% url 'category_list' %}">
+          <i class="bi bi-folder2-open me-1"></i> Categories
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link {% if request.resolver_match.url_name == 'account_balance' %}active{% endif %}" href="{% url 'account_balance' %}">
+          <i class="bi bi-calendar3 me-1"></i> Monthly Balances
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link {% if request.resolver_match.url_name == 'account_list' %}active{% endif %}" href="{% url 'account_list' %}">
+          <i class="bi bi-bank me-1"></i> Accounts
+        </a>
+      </li>
+    </ul>
 
-        <ul class="navbar-nav ms-auto">
-          <li class="nav-item">
-            <span class="navbar-text me-3">Hi, {{ user.username }}!</span>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{% url 'logout' %}">Logout</a>
-          </li>
-        </ul>
-      {% else %}
-        <ul class="navbar-nav ms-auto">
-          <li class="nav-item">
-            <a class="nav-link {% if request.resolver_match.url_name == 'login' %}active{% endif %}" href="{% url 'login' %}">Login</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link {% if request.resolver_match.url_name == 'signup' %}active{% endif %}" href="{% url 'signup' %}">Sign Up</a>
-          </li>
-        </ul>
-      {% endif %}
-    </div>
+    <ul class="navbar-nav ms-auto">
+      <li class="nav-item">
+<span class="navbar-text d-flex align-items-center me-3">
+  <i class="bi bi-person-circle me-1"></i>
+  <span>{{ user.username }}</span>
+</span>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="{% url 'logout' %}">
+          <i class="bi bi-box-arrow-right me-1"></i> Logout
+        </a>
+      </li>
+    </ul>
+  {% else %}
+    <ul class="navbar-nav ms-auto">
+      <li class="nav-item">
+        <a class="nav-link {% if request.resolver_match.url_name == 'login' %}active{% endif %}" href="{% url 'login' %}">
+          <i class="bi bi-box-arrow-in-right me-1"></i> Login
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link {% if request.resolver_match.url_name == 'signup' %}active{% endif %}" href="{% url 'signup' %}">
+          <i class="bi bi-person-plus me-1"></i> Sign Up
+        </a>
+      </li>
+    </ul>
+  {% endif %}
+</div>
+
+
+
   </div>
 </nav>
 {% endblock %}
