--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -35,8 +35,13 @@
   {% if user.is_authenticated %}
     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
       <li class="nav-item">
-        <a class="nav-link {% if request.resolver_match.url_name == 'transaction_list' %}active{% endif %}" href="{% url 'transaction_list' %}">
+        <a class="nav-link {% if request.resolver_match.url_name == 'dashboard' %}active{% endif %}" href="{% url 'dashboard' %}">
           <i class="bi bi-bar-chart-fill me-1"></i> Dashboard
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link {% if request.resolver_match.url_name == 'transaction_list' %}active{% endif %}" href="{% url 'transaction_list' %}">
+          <i class="bi bi-table me-1"></i> Transactions
         </a>
       </li>
       <li class="nav-item">
@@ -63,10 +68,10 @@
 
     <ul class="navbar-nav ms-auto">
       <li class="nav-item">
-<span class="navbar-text d-flex align-items-center me-3">
-  <i class="bi bi-person-circle me-1"></i>
-  <span>{{ user.username }}</span>
-</span>
+        <span class="navbar-text d-flex align-items-center me-3">
+          <i class="bi bi-person-circle me-1"></i>
+          <span>{{ user.username }}</span>
+        </span>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="{% url 'logout' %}">
@@ -92,6 +97,8 @@
 
 
 
+
+
   </div>
 </nav>
 {% endblock %}
@@ -114,9 +121,18 @@
 </div>
 
 <!-- Bootstrap JS + custom JS -->
+<!-- Bootstrap JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" defer></script>
+
+<!-- DataTables + jQuery (requerido por DataTables) -->
+<link rel="stylesheet" href="https://cdn.datatables.net/1.13.6/css/dataTables.bootstrap5.min.css">
+<script src="https://code.jquery.com/jquery-3.7.1.min.js" defer></script>
+<script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js" defer></script>
+<script src="https://cdn.datatables.net/1.13.6/js/dataTables.bootstrap5.min.js" defer></script>
+
 {% block extra_js %}
 <script src="{% static 'js/main.js' %}"></script>
 {% endblock %}
 </body>
 </html>
+
